--- a/index.html
+++ b/index.html
@@ -32,29 +32,26 @@
 </head>
 
 <body>
-    <header>
-        <!-- block 1  logo image-->
-        <div>
-            <img class="block logo" src="images/logo.png" alt="logo">
-        </div>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #457373;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              
+              <a class="navbar-brand" href="index.html"><img class="block logo" src="images/logo.png" alt="logo"></a>
+
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Features</a>
-                  <a class="nav-link" href="#">Pricing</a>
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="about.html">About</a>
+                  <a class="nav-link" href="protfolio.html">Portfolio</a>
+                  <a class="nav-link" href="contact.html">Contact</a>
                 </div>
               </div>
             </div>
           </nav>
-
     </header>
 
     <main>
@@ -84,7 +81,7 @@
 
           <!-- copyright -->
           <div>
-            <p class="copyright">&copy;Copyright MOODICECREAM, 2021</p>
+            <p class="copyright">&copy;Xiaoyu Ding Portfolio, 2021</p>
         </div>
         <!-- end copyright -->
 
@@ -109,7 +106,6 @@
     </div><!-- container -->
     </footer>
 
-    
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
     </script>
