add more information

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 
                 <!-- There are many DIV elements in the table for convenient typesetting in CSS -->
                 <form class="cf">
-                    <h1>Contact US</h1>
+                    <h1>Contact</h1>
 
                     <div class="form-iteam">
 
@@ -87,7 +87,7 @@
                         height="400" style="border: none;">
                     </iframe>
                 </div><!-- end location -->
-                
+
                 <div class="map">
                     <button Class="btn map" id="map" type="button">Go To Map</button>
                 </div>
