--- a/protfolio.html
+++ b/protfolio.html
@@ -26,6 +26,7 @@
 
     <!-- own style -->
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/protfolio.css">
 
 
     <title>Xiaoyu Ding Portfolio</title>
@@ -58,7 +59,7 @@
         
             <h1> All Projects</h1>
 
-            <div class="p-container"></div>
+            <div class="p-container">
             <!-- Web Design  -->
             <div class="project">
                  <img class="Webimg" src="images/web.png" alt="web-image">
