--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="UTF-8">
@@ -22,7 +23,8 @@
     <script src="https://kit.fontawesome.com/931c767dbc.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <!-- own style -->
     <link rel="stylesheet" href="css/base.css">
@@ -36,22 +38,24 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #457373;">
             <div class="container-fluid">
-              
-              <a class="navbar-brand" href="index.html"><img class="block logo" src="images/logo.png" alt="logo"></a>
 
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link" href="index.html">Home</a>
-                  <a class="nav-link" href="about.html">About</a>
-                  <a class="nav-link" href="protfolio.html">Portfolio</a>
-                  <a class="nav-link" href="contact.html">Contact</a>
+                <a class="navbar-brand" href="index.html"><img class="block logo" src="images/logo.png" alt="logo"></a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="protfolio.html">Portfolio</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <main>
@@ -77,14 +81,14 @@
                             <button Class="btn send" id="send" type="button">SEND</button>
                         </div>
                     </div>
-                </form><!-- end of form -->  
+                </form><!-- end of form -->
             </div><!-- end of box-1 -->
 
             <div class="box box-2">
                 <div class="map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5607.915258700108!2d-75.75914377318216!3d45.349667566398914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0722395fc63d%3A0x35c46b5ff47a522!2sAlgonquin%20College%2C%201385%20Woodroffe%20Ave%2C%20Nepean%2C%20ON%20K2G%203G7!5e0!3m2!1szh-CN!2sca!4v1617743562529!5m2!1szh-CN!2sca"
-                        height="400" style="border: none;">
+                        height="375" style="border: none;">
                     </iframe>
                 </div><!-- end location -->
 
@@ -100,35 +104,37 @@
         <!-- set footer container style -->
         <div class="container">
 
-          <!-- copyright -->
-          <div>
-            <p class="copyright">&copy;Xiaoyu Ding Portfolio, 2021</p>
-        </div>
-        <!-- end copyright -->
-
-        <!-- icons divided into four block-->
-        <div class="icons">
-            <div class="block">
-                <img src="images/icons/facebook.svg" alt="facebook" />
+            <!-- copyright -->
+            <div>
+                <p class="copyright">&copy;Xiaoyu Ding Portfolio, 2021</p>
             </div>
+            <!-- end copyright -->
 
-            <div class="block">
-                <img src="images/icons/instagram.svg" alt="instagram" />
-            </div>
+            <!-- icons divided into four block-->
+            <div class="icons">
+                <div class="block">
+                    <img src="images/icons/facebook.svg" alt="facebook" />
+                </div>
 
-            <div class="block">
-                <img src="images/icons/twitter.svg" alt="twitter" />
-            </div>
+                <div class="block">
+                    <img src="images/icons/instagram.svg" alt="instagram" />
+                </div>
 
-            <div class="block">
-                <img src="images/icons/linkedin.svg" alt="linkedin" />
-            </div>
-        </div><!-- end icons -->   
-    </div><!-- container -->
+                <div class="block">
+                    <img src="images/icons/twitter.svg" alt="twitter" />
+                </div>
+
+                <div class="block">
+                    <img src="images/icons/linkedin.svg" alt="linkedin" />
+                </div>
+            </div><!-- end icons -->
+        </div><!-- container -->
     </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
     </script>
 </body>
+
 </html>
