--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
                         professional skills and proactive attitude, I am certain that I can integrate myself into the
                         team quickly, complete tasks efficiently, contribute assistance effectively and coordinate with
                         teammates tightly.</p>
+                    <div class="btn">
+                        <a href="about.html">View More<i class="fas fa-play"></i></a>
+                    </div>
                 </div>
 
-                <div class="a btn">
-                    <a href="about.html">View More<i class="fas fa-play"></i></a>
-                </div>
+
 
             </div><!-- end box 2-->
 
@@ -106,24 +107,28 @@
                         professional skills and proactive attitude, I am certain that I can integrate myself into the
                         team quickly, complete tasks efficiently, contribute assistance effectively and coordinate with
                         teammates tightly.</p>
+                    <div class="btn">
+                        <a href="">Dowload CV<i class="fas fa-play"></i></a>
+                    </div>
                 </div>
-                <div class="b btn">
-                    <a href="">Dowload CV<i class="fas fa-play"></i></a>
-                </div>
+
             </div><!-- end box 3-->
 
             <!-- box 4: about skills -->
             <div class="box box-4">
                 <div class="c">
-                    <a href="about.html"><img src="images/about.png" alt="about"/></a>
+                    <h2>About</h2>
+                    <a href="about.html"><img src="images/about.png" alt="about" /></a>
                 </div>
 
                 <div class="c">
-                    <a href="protfolio.html"><img src="images/project.png" alt="project"/></a>
+                    <h2>Protfolio</h2>
+                    <a href="protfolio.html"><img src="images/project.png" alt="project" /></a>
                 </div>
 
                 <div class="c">
-                    <a href="contact.html"><img src="images/contact.png" alt="contact"/></a>
+                    <h2>contact</h2>
+                    <a href="contact.html"><img src="images/contact.png" alt="contact" /></a>
                 </div>
 
             </div><!-- end box 4-->
