--- a/about.html
+++ b/about.html
@@ -1,97 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!-- Required meta tags -->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Required meta tags -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Clear style -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Clear style -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <!-- Google Map -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+  <!-- Google Map -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
 
-    <!--  -->
-    <script src="https://kit.fontawesome.com/931c767dbc.js" crossorigin="anonymous"></script>
+  <!--  -->
+  <script src="https://kit.fontawesome.com/931c767dbc.js" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    <!-- own style -->
-    <link rel="stylesheet" href="css/base.css">
+  <!-- own style -->
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/about.css">
 
 
-    <title>Xiaoyu Ding Portfolio</title>
+  <title>Xiaoyu Ding Portfolio</title>
 </head>
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #457373;">
-            <div class="container-fluid">
-              
-              <a class="navbar-brand" href="index.html"><img class="block logo" src="images/logo.png" alt="logo"></a>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #457373;">
+      <div class="container-fluid">
 
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link" href="index.html">Home</a>
-                  <a class="nav-link" href="about.html">About</a>
-                  <a class="nav-link" href="protfolio.html">Portfolio</a>
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
+        <a class="navbar-brand" href="index.html"><img class="block logo" src="images/logo.png" alt="logo"></a>
 
-    <main>
-     
-
-    </main>
-
-    <footer>
-        <!-- set footer container style -->
-        <div class="container">
-
-          <!-- copyright -->
-          <div>
-            <p class="copyright">&copy;Xiaoyu Ding Portfolio, 2021</p>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="protfolio.html">Portfolio</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+          </div>
         </div>
-        <!-- end copyright -->
+      </div>
+    </nav>
+  </header>
 
-        <!-- icons divided into four block-->
-        <div class="icons">
-            <div class="block">
-                <img src="images/icons/facebook.svg" alt="facebook" />
-            </div>
+  <main>
 
-            <div class="block">
-                <img src="images/icons/instagram.svg" alt="instagram" />
-            </div>
+    <div class="box box-1">
+      <div class="a">
+        <img class="ding" src="images/ding.PNG" alt="ding" />
+      </div>
 
-            <div class="block">
-                <img src="images/icons/twitter.svg" alt="twitter" />
-            </div>
+      <div class="a">
+        <h2>About Me</h2>
+        <p>I'm a 2nd year student student in the Interactive Media Design Program at Algonquin College. I am
+          looking for the Web Designer job opportunity. <br>Based on my development experiences,
+          professional skills and proactive attitude, I am certain that I can integrate myself into the
+          team quickly, complete tasks efficiently, contribute assistance effectively and coordinate with
+          teammates tightly.</p>
+      </div>
+    </div>
 
-            <div class="block">
-                <img src="images/icons/linkedin.svg" alt="linkedin" />
-            </div>
-        </div><!-- end icons -->   
+    <div class="box">
+      <h2>Education</h2>
+      <ul>
+        <li>
+          Interactive Media Design Diploma Program | Jan 2021 – present<br>
+          Algonquin College, Ottawa, ON<br>
+          GPA: 3.73/4
+        </li>
+        <li>
+          Computer Programmer Diploma Program | May 2018 – April 2020<br>
+          Algonquin College, Ottawa, ON<br>
+          Dean’s Honor’s List<br>
+          GPA: 3.72/4
+        </li>
+        <li>
+          Bachelor of Art and Design | September 2008 – July 2012<br>
+          Agricultural University of Hebei, Hebei, China<br>
+          GPA: 3.8/4
+        </li>
+      </ul>
+    </div>
+
+    <div class="box">
+      <h2>Academic Skills</h2>
+      <ul>
+        <li>
+          Programming Languages: <br>
+          PHP, JavaScript, Java/JavaFX, Network Programming, Bash Scripting, Cobol, HTML, CSS, SQL
+        </li>
+
+        <li>
+          Operating Systems and Tools: <br>
+          Windows, Linux, Android, GitHub, Visual Code Studio, Photoshop, AutoCAD, XD, Illustrator, Lightroom,
+          WordPress, Drupal
+        </li>
+        <li>
+          Database:<br>
+          Oracle, MySQL, MS Access, PostgreSQL, MS SQL Server
+        </li>
+      </ul>
+    </div>
+
+  </main>
+
+  <footer>
+    <!-- set footer container style -->
+    <div class="container">
+
+      <!-- copyright -->
+      <div>
+        <p class="copyright">&copy;Xiaoyu Ding Portfolio, 2021</p>
+      </div>
+      <!-- end copyright -->
+
+      <!-- icons divided into four block-->
+      <div class="icons">
+        <div class="block">
+          <img src="images/icons/facebook.svg" alt="facebook" />
+        </div>
+
+        <div class="block">
+          <img src="images/icons/instagram.svg" alt="instagram" />
+        </div>
+
+        <div class="block">
+          <img src="images/icons/twitter.svg" alt="twitter" />
+        </div>
+
+        <div class="block">
+          <img src="images/icons/linkedin.svg" alt="linkedin" />
+        </div>
+      </div><!-- end icons -->
     </div><!-- container -->
-    </footer>
+  </footer>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
-    </script>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
+  </script>
 </body>
+
 </html>
