--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 
     <div class="box box-1">
       <div class="a">
-        <img class="ding" src="images/ding.PNG" alt="ding" />
+        <img src="images/ding.png" alt="ding" />
       </div>
 
       <div class="a">
