--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <!-- box 2: about me-->
             <div class="box box-2">
                 <div class="a">
-                    <img class="ding" src="images/ding.png" alt="ding"/>
+                    <img src="images/ding.png" alt="ding" />
                 </div>
 
                 <div class="a">
