--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <!-- Google Map -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
-
-    <!--  -->
+    <!-- FontAwesomeKit -->
     <script src="https://kit.fontawesome.com/931c767dbc.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS -->
@@ -27,7 +24,7 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <!-- own style -->
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/base. css">
     <link rel="stylesheet" href="css/contact.css">
 
     <title>Xiaoyu Ding Portfolio</title>
