Check code again

--- a/index.html
+++ b/index.html
@@ -90,11 +90,8 @@
                         <a href="about.html">View More<i class="fas fa-play"></i></a>
                     </div>
                 </div>
-
-
-
             </div><!-- end box 2-->
-
+            <hr>
             <!-- box 3: about skills -->
             <div class="box box-3">
                 <div class="b">
@@ -102,18 +99,30 @@
                 </div>
                 <div class="b">
                     <h2>My skills</h2>
-                    <p>I'm a 2nd year student student in the Interactive Media Design Program at Algonquin College. I am
-                        looking for the Web Designer job opportunity. <br>Based on my development experiences,
-                        professional skills and proactive attitude, I am certain that I can integrate myself into the
-                        team quickly, complete tasks efficiently, contribute assistance effectively and coordinate with
-                        teammates tightly.</p>
+                    <ul>
+                        <li>
+                            Programming Languages: <br>
+                            PHP, JavaScript, Java/JavaFX, Network Programming, Bash Scripting, Cobol, HTML, CSS, SQL
+                        </li>
+
+                        <li>
+                            Operating Systems and Tools: <br>
+                            Windows, Linux, Android, GitHub, Visual Code Studio, Photoshop, AutoCAD, XD, Illustrator,
+                            Lightroom,
+                            WordPress, Drupal
+                        </li>
+                        <li>
+                            Database:<br>
+                            Oracle, MySQL, MS Access, PostgreSQL, MS SQL Server
+                        </li>
+                    </ul>
                     <div class="btn">
                         <a href="">Dowload CV<i class="fas fa-play"></i></a>
                     </div>
                 </div>
 
             </div><!-- end box 3-->
-
+            <hr>
             <!-- box 4: about skills -->
             <div class="box box-4">
                 <div class="c">
