--- a/try/index.html
+++ b/try/index.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MTM6302-exsersie1</title>
-
-    <!-- castomize style sheet -->
-    <link rel="stylesheet" href="/try/style.css">
+    <title>Generate QR Code</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <h1>Emoji</h1>
-    <div class="flex" id="flex">
-        <div id="emojis" class="box">
-        <!-- <p >
-           <span class="emoji">&#129409</span><br>
-            <code class="code">129409</code> 
-        </p> -->
-    </div>
-    </div>
     
-    <script src="/try/script.js"></script>
+    <div class="center">
+        <div class="form">
+          <div class="form-element">
+            <label for="data-ip">Enter website address</label>
+            <input type="text" id="data-ip">
+          </div>
+          <div class="form-element">
+            <button>Generate QR Code</button>
+          </div>
+        </div>
+        <div class="qr-img">
+          <img src="">
+        </div>
+      </div>
+ 
+      
 </body>
 </html>
+
