--- a/QRCode/index.html
+++ b/QRCode/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generate QR Code</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/QRCode/style.css">
 
 </head>
 <body>
@@ -26,6 +26,6 @@
         </div>
       </div>
  
-      <script src="/script.js"></script>
+      <script src="/QRCode/script.js"></script>
 </body>
 </html>
